kubernetes/apps/base/automation/n8n/ingress.yaml
# n8n Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: automation
  labels:
    app.kubernetes.io/name: n8n
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - n8n.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: n8n.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
